--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10414394?serverTimezone=America/Lima
-spring.datasource.username=sql10414394
-spring.datasource.password=zdc3jWGgct
+spring.datasource.url=jdbc:mysql://localhost:3306/redsocial?serverTimezone=America/Lima
+spring.datasource.username=root
+spring.datasource.password=mysql
+
+//spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10414394?serverTimezone=America/Lima
+//spring.datasource.username=sql10414394
+//spring.datasource.password=zdc3jWGgct
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= none 
